-- firebase auth with email and authorization

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -11,14 +11,12 @@
   },
   "Jwt": {
     "Issuer": "SocialMediaAPI",
-    "Secret": "d73a99325f2453d740818ec692306aa989a92b63",
+    "Secret": "37816BD69A8173BF7F32587D8BC2F",
     "Lifetime": 1440
   },
   "Firebase": {
     "ApiKey": "AIzaSyCg68YL2X4UDWs4wK93VFp_mTCjZ7uKjlE",
-    "StorageBucket": "socialmedia-40b42.appspot.com",
-    "Email": "huyvd@yopmail.com",
-    "Password": "admin@123"
+    "StorageBucket": "socialmedia-40b42.appspot.com"
   },
   "FirebasePrivateKey": "socialmedia.json",
   "AllowedHosts": "*"
