Update Google and FacebookAuth

--- a/DataAccess/efpt.config.json
+++ b/DataAccess/efpt.config.json
@@ -7,7 +7,7 @@
    "IncludeConnectionString": false,
    "ModelNamespace": null,
    "OutputContextPath": null,
-   "OutputPath": null,
+   "OutputPath": "Entities",
    "PreserveCasingWithRegex": true,
    "ProjectRootNamespace": "DataAccess",
    "Schemas": null,
