--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -18,6 +18,12 @@
     "ApiKey": "AIzaSyCg68YL2X4UDWs4wK93VFp_mTCjZ7uKjlE",
     "StorageBucket": "socialmedia-40b42.appspot.com"
   },
+  "Authentication": {
+    "Google": {
+      "ClientId": "535131366900-v3bhic90l456acosa6n61bbekqhjmgvp.apps.googleusercontent.com",
+      "ClientSerect": "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"
+    }
+  },
   "FirebasePrivateKey": "socialmedia.json",
   "AllowedHosts": "*"
 }
