--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "LocalConnection": "Data Source=SE140089\\MSSQLSERVER19;Initial Catalog=SocialMedia;Trusted_Connection=True"
+    "LocalConnection": "Data Source=45.119.85.68,1433;Initial Catalog=SocialMedia;Persist Security Info=True;Integrated Security=False;User ID=sa;Password=@dminzZz123"
   },
   "Jwt": {
     "Issuer": "SocialMediaAPI",
