ReactionType and Hashtag function

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "LocalConnection": "Data Source=SE140089\\MSSQLSERVER19;Initial Catalog=SocialMedia;Trusted_Connection=True"
+    "LocalConnection": "Data Source=DESKTOP-DC7UJ82\\MSSQLSERVER1;Initial Catalog=SocialMedia;Trusted_Connection=True"
   },
   "Jwt": {
     "Issuer": "SocialMediaAPI",
