--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "LocalConnection": "Data Source=45.119.85.68,1433;Initial Catalog=SocialMedia;Persist Security Info=True;Integrated Security=False;User ID=sa;Password=@dminzZz123"
+    "LocalConnection": "Data Source=45.119.85.68,1433;Initial Catalog=SocialMedia;Persist Security Info=True;Integrated Security=False;User ID=sa;Password=@dminzZz123",
+    "HangfireConnection": "Data Source=45.119.85.68,1433;Initial Catalog=Hangfire;Persist Security Info=True;Integrated Security=False;User ID=sa;Password=@dminzZz123"
   },
   "Jwt": {
     "Issuer": "SocialMediaAPI",
