--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -15,6 +15,7 @@
     "Secret": "37816BD69A8173BF7F32587D8BC2F",
     "Lifetime": 1440
   },
+
   "Firebase": {
     "ApiKey": "AIzaSyCg68YL2X4UDWs4wK93VFp_mTCjZ7uKjlE",
     "StorageBucket": "socialmedia-40b42.appspot.com"
@@ -24,6 +25,10 @@
       "ClientId": "535131366900-v3bhic90l456acosa6n61bbekqhjmgvp.apps.googleusercontent.com",
       "ClientSerect": "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"
     }
+  },
+  "CacheConfiguration": {
+    "AbsoluteExpirationInHours": 1,
+    "SlidingExpirationInMinutes": 30
   },
   "FirebasePrivateKey": "socialmedia.json",
   "AllowedHosts": "*"
