--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.AspNet.SignalR.Core" Version="2.4.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="5.0.17" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.17" />
+    <PackageReference Include="Microsoft.Extensions.Caching.SqlServer" Version="5.0.0" />
     <PackageReference Include="SSH.NET" Version="2020.0.2" />
   </ItemGroup>
 
