--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -8,7 +8,8 @@
   },
   "ConnectionStrings": {
     "LocalConnection": "Data Source=103.97.124.102,1433;Initial Catalog=SocialMedia;Persist Security Info=True;Integrated Security=False;User ID=sa;Password=@dminzZz123",
-    "HangfireConnection": "Data Source=103.97.124.102,1433;Initial Catalog=Hangfire;Persist Security Info=True;Integrated Security=False;User ID=sa;Password=@dminzZz123"
+    "HangfireConnection": "Data Source=103.97.124.102,1433;Initial Catalog=Hangfire;Persist Security Info=True;Integrated Security=False;User ID=sa;Password=@dminzZz123",
+    "Caching": "Data Source=103.97.124.102,1433;Initial Catalog=Caching;Persist Security Info=True;Integrated Security=False;User ID=sa;Password=@dminzZz123",
   },
   "Jwt": {
     "Issuer": "SocialMediaAPI",
