--Fix user table

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -9,7 +9,7 @@
   "ConnectionStrings": {
     "LocalConnection": "Data Source=103.97.124.102,1433;Initial Catalog=SocialMedia;Persist Security Info=True;Integrated Security=False;User ID=sa;Password=@dminzZz123",
     "HangfireConnection": "Data Source=103.97.124.102,1433;Initial Catalog=Hangfire;Persist Security Info=True;Integrated Security=False;User ID=sa;Password=@dminzZz123",
-    "Caching": "Data Source=103.97.124.102,1433;Initial Catalog=Caching;Persist Security Info=True;Integrated Security=False;User ID=sa;Password=@dminzZz123",
+    "Caching": "Data Source=103.97.124.102,1433;Initial Catalog=Caching;Persist Security Info=True;Integrated Security=False;User ID=sa;Password=@dminzZz123"
   },
   "Jwt": {
     "Issuer": "SocialMediaAPI",
@@ -40,7 +40,37 @@
     "HashSecret": "ZGLZMVCIJSMIXMBSEDMMGNSZOHTNMRQL",
     "ReturnUrl": "vnpay_return"
   },
-  
+  "HangfireSettings": {
+    "UserName": "admin",
+    "Password": "@dminzZz123"
+  },
+  "Worker": [
+    {
+      "QueueName": "facebook",
+      "WorkerCount": 3
+    },
+    {
+      "QueueName": "tiktok",
+      "WorkerCount": 2
+    },
+    {
+      "QueueName": "youtube",
+      "WorkerCount": 2
+    },
+    {
+      "QueueName": "fparser",
+      "WorkerCount": 1
+    },
+    {
+      "QueueName": "yparser",
+      "WorkerCount": 1
+    },
+    {
+      "QueueName": "tparser",
+      "WorkerCount": 1
+    },
+
+  ],
   "FirebasePrivateKey": "socialmedia.json",
   "AllowedHosts": "*"
 }
