--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -38,7 +38,14 @@
   "Payment": {
     "TmnCode": "CJ7NZH13",
     "HashSecret": "ZGLZMVCIJSMIXMBSEDMMGNSZOHTNMRQL",
-    "ReturnUrl": "vnpay_return"
+    "ReturnUrl": "https://socialmedia-40b42.web.app/walletPayment",
+    "VnpUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"
+  },
+  "SSHConnection": {
+    "IP": "103.97.124.141",
+    "Username": "administrator",
+    "Password": "p4mQkE2dZP5F808"
+
   },
   "HangfireSettings": {
     "UserName": "admin",
@@ -51,7 +58,7 @@
     },
     {
       "QueueName": "tiktok",
-      "WorkerCount": 2
+      "WorkerCount": 1
     },
     {
       "QueueName": "youtube",
@@ -68,7 +75,7 @@
     {
       "QueueName": "tparser",
       "WorkerCount": 1
-    },
+    }
 
   ],
   "FirebasePrivateKey": "socialmedia.json",
